infra/registry/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-registry
  namespace: kube-system
  labels:
    app: kube-registry
    app.kubernetes.io/name: kube-registry
    app.kubernetes.io/part-of: registry
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.stadthagen.dev`)
      kind: Rule
      services:
        - name: kube-registry
          port: 5000
  tls:
    secretName: registry-tls
